--- a/example/index.html
+++ b/example/index.html
@@ -5,27 +5,48 @@
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 		<script src="../mast-1.0.js" type="text/javascript"></script>
 		<script type="text/javascript">
+			// Row component
 			Mast.components.BirdSpeciesRow = Mast.Component.extend({
 				outlet: '.bird-species-list',
 				template: '#template-bird-species'
 			});
+			
+			// Initialize route-level logic
+			// with defaults (everyone likes blue jays!)
+			Mast.routes.index = function(query,page) {
+				
+				new Mast.components.BirdSpeciesRow({
+					model:{name: 'Cyanocitta cristata'}
+				});
+				
+				new Mast.components.BirdSpeciesRow({
+					model:{name: 'Cardinalidae'}
+				});
+			}
+			
+			// Initialize the Mast template library
+			Mast.raise();
 		</script>
 	</head>
 	<body>
-		
-		
+
+		<!-- Standard layout markup -->
 		<div class="container">
 			<h1>My favorite bird species</h1>
 			<ul class="bird-species-list">
+				<li>Bird #1</li>
+				<li>Bird #2</li>
+				<li>Bird #3</li>
 			</ul>
 		</div>
-		
-		
+
+
 		<!-- Template library -->
 		<div style="display:none;" class="template-library" id="template-library">
-			
+
+			<!-- Row markup template -->
 			<li id="template-bird-species">{{name}}</li>
-			
+
 		</div>
 	</body>
 </html>
