--- a/example/index.html
+++ b/example/index.html
@@ -2,14 +2,9 @@
 <html>
 	<head>
 		<title></title>
-		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">		
 		<script src="../mast-1.0.js" type="text/javascript"></script>
 		<script type="text/javascript">
-			// Row component
-			Mast.components.BirdSpeciesRow = Mast.Component.extend({
-				outlet: '.bird-species-list',
-				template: '#template-bird-species'
-			});
 			
 			// Initialize route-level logic
 			// with defaults (everyone likes blue jays!)
@@ -33,11 +28,11 @@
 		<!-- Standard layout markup -->
 		<div class="container">
 			<h1>My favorite bird species</h1>
-			<ul class="bird-species-list">
+			<ol class="bird-species-list">
 				<li>Bird #1</li>
 				<li>Bird #2</li>
 				<li>Bird #3</li>
-			</ul>
+			</ol>
 		</div>
 
 
@@ -48,5 +43,28 @@
 			<li id="template-bird-species">{{name}}</li>
 
 		</div>
+		
+		
+		
+		
+		<!-- Separate files: -->
+		<style type="text/css">
+			.bird-species-list  {
+				background:blue;
+			}
+			.bird-species-list li {
+				background:#228;
+				padding: 0.5 10%;
+				color: white;
+			}
+		</style>
+		
+		<script type="text/javascript">
+			// Row component
+			Mast.components.BirdSpeciesRow = Mast.Component.extend({
+				outlet: '.bird-species-list',
+				template: '#template-bird-species'
+			});
+		</script>
 	</body>
 </html>
