disabled socket in single-page example

--- a/example/index.html
+++ b/example/index.html
@@ -20,7 +20,9 @@
 			}
 			
 			// Initialize the Mast template library
-			Mast.raise();
+			Mast.raise({
+				socket:false
+			});
 		</script>
 	</head>
 	<body>
