--- a/example/index.html
+++ b/example/index.html
@@ -26,6 +26,9 @@
 			<script type="text/javascript" src="../lib/deps/$.js"></script>
 			<script type="text/javascript" src="../lib/deps/_.js"></script>
 			<script type="text/javascript" src="../lib/deps/async.js"></script>
+			<script type="text/javascript" src="../lib/mast.js"></script>
+			<script type="text/javascript" src="../lib/ready.js"></script>
+			<script type="text/javascript" src="../lib/raise.js"></script>
 			
 			<script type="text/javascript" data-main="main" src="deps/require.js"></script>
         </body>
