--- a/example/index.html
+++ b/example/index.html
@@ -18,10 +18,13 @@
 
 
 
-<!-- Core -->
+<!-- Core dependencies -->
 <script type="text/javascript" src="../lib/deps/$.js"></script>
 <script type="text/javascript" src="../lib/deps/_.js"></script>
+<script type="text/javascript" src="../lib/deps/Backbone.js"></script>
 <script type="text/javascript" src="../lib/deps/async.js"></script>
+
+<!-- Core -->
 <script type="text/javascript" src="../lib/mast.js"></script>
 <script type="text/javascript" src="../lib/ready.js"></script>
 <script type="text/javascript" src="../lib/raise.js"></script>
