--- a/example/index.html
+++ b/example/index.html
@@ -11,27 +11,29 @@
     </head>
     
     <body>
-        <region id="App" default="Nav"/>
+        <region id="App" default="Nav"></region>
+
+        <link rel="stylesheet" type="text/css" href="components/Nav.css" />
+
+				<!-- Core dependencies -->
+				<script type="text/javascript" src="../lib/deps/$.js"></script>
+				<script type="text/javascript" src="../lib/deps/_.js"></script>
+				<script type="text/javascript" src="../lib/deps/Backbone.js"></script>
+				<script type="text/javascript" src="../lib/deps/async.js"></script>
+
+				<!-- Core -->
+				<script type="text/javascript" src="../lib/mast.js"></script>
+				<script type="text/javascript" src="../lib/Component.js"></script>
+				<script type="text/javascript" src="../lib/Region.js"></script>
+				<script type="text/javascript" src="../lib/Data.js"></script>
+				<script type="text/javascript" src="../lib/Router.js"></script>
+				<script type="text/javascript" src="../lib/Delegator.js"></script>
+				<script type="text/javascript" src="../lib/Comet.js"></script>
+				<script type="text/javascript" src="../lib/ready.js"></script>
+				<script type="text/javascript" src="../lib/raise.js"></script>
+
+				<!-- App code -->
+				<script type="text/javascript" data-main="main" src="deps/require.js"></script>
     </body>
 
 </html>
-
-<!-- Core dependencies -->
-<script type="text/javascript" src="../lib/deps/$.js"></script>
-<script type="text/javascript" src="../lib/deps/_.js"></script>
-<script type="text/javascript" src="../lib/deps/Backbone.js"></script>
-<script type="text/javascript" src="../lib/deps/async.js"></script>
-
-<!-- Core -->
-<script type="text/javascript" src="../lib/mast.js"></script>
-<script type="text/javascript" src="../lib/Component.js"></script>
-<script type="text/javascript" src="../lib/Region.js"></script>
-<script type="text/javascript" src="../lib/Data.js"></script>
-<script type="text/javascript" src="../lib/Router.js"></script>
-<script type="text/javascript" src="../lib/Delegator.js"></script>
-<script type="text/javascript" src="../lib/Comet.js"></script>
-<script type="text/javascript" src="../lib/ready.js"></script>
-<script type="text/javascript" src="../lib/raise.js"></script>
-
-<!-- App code -->
-<script type="text/javascript" data-main="main" src="deps/require.js"></script>
