Collection driven list and global data bindings work.

--- a/example/index.html
+++ b/example/index.html
@@ -32,12 +32,12 @@
     </head>
     
     <body>
-    	<h1>Hello world</h1>
-      <region id="App" default="Nav"></region>
+    	<h1>Mast 2.0</h1>
+      <region default="Nav"></region>
 
 
-      <h2> more things</h2>
-      <region id="foo" default="Footer"></region>
+<!--       <h2> more things</h2>
+      <region default="Footer"></region> -->
     </body>
 
 
