Cleaned up example nomenclature

--- a/example/index.html
+++ b/example/index.html
@@ -8,7 +8,7 @@
         <!-- Viewport mobile tag for sensible mobile support -->
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"
         />
-	    <link rel="stylesheet" type="text/css" href="components/Nav.css" />
+	    <link rel="stylesheet" type="text/css" href="styles/layout.css" />
 
 		<!-- Core dependencies -->
 		<script type="text/javascript" src="../lib/deps/$.js"></script>
