Changed up nomenclature

--- a/example/index.html
+++ b/example/index.html
@@ -33,7 +33,7 @@
     
     <body>
     	<h1>Mast 2.0</h1>
-    	<region default="Nav"></region>
+    	<region default="Rainbow"></region>
 
 
 <!--       <h2> more things</h2>
