--- a/example/index.html
+++ b/example/index.html
@@ -18,6 +18,7 @@
 
 		<!-- Core -->
 		<script type="text/javascript" src="../lib/mast.js"></script>
+		<script type="text/javascript" src="../lib/define.js"></script>
 		<script type="text/javascript" src="../lib/Component.js"></script>
 		<script type="text/javascript" src="../lib/Region.js"></script>
 		<script type="text/javascript" src="../lib/Data.js"></script>
@@ -34,10 +35,6 @@
     <body>
     	<h1>Mast 2.0</h1>
     	<region default="Rainbow"></region>
-
-
-<!--       <h2> more things</h2>
-      <region default="Footer"></region> -->
     </body>
 
 
