Added script tag template finder.  Cleanpu.

--- a/example/index.html
+++ b/example/index.html
@@ -18,6 +18,7 @@
 
 		<!-- Core -->
 		<script type="text/javascript" src="../lib/mast.js"></script>
+		<script type="text/javascript" src="../lib/Util.js"></script>
 		<script type="text/javascript" src="../lib/define.js"></script>
 		<script type="text/javascript" src="../lib/Component.js"></script>
 		<script type="text/javascript" src="../lib/Region.js"></script>
@@ -36,6 +37,14 @@
     	<h1>Mast 2.0</h1>
     	<region default="Rainbow"></region>
     </body>
+
+    <script type="text/template" data-id="foo">
+    <h1>Foo</h1>
+    </script>
+
+    <script type="text/template" data-id="foo2">
+    <h1>Foo2</h1>
+    </script>
 
 
 </html>
