Anonymous components are now automatically generated if a template with the proper id exists.

--- a/example/index.html
+++ b/example/index.html
@@ -38,12 +38,8 @@
     	<region default="Rainbow"></region>
     </body>
 
-    <script type="text/template" data-id="foo">
-    <h1>Foo</h1>
-    </script>
-
-    <script type="text/template" data-id="foo2">
-    <h1>Foo2</h1>
+    <script type="text/template" data-id="Footer">
+    	<h1>Footer here?</h1>
     </script>
 
 
