Remove whitespace from templates that cmoe out of the DOM.

--- a/example/index.html
+++ b/example/index.html
@@ -65,7 +65,7 @@
     </script>
 
     <script type="text/template" data-id="Row">
-    	<li style="background-color: <%= color %>;" />
+    	<li style="background-color: <%= color %>;"></li>
     </script>
 
     <script type="text/template" data-id="Rainbow">
