--- a/example/index.html
+++ b/example/index.html
@@ -11,15 +11,12 @@
 	    <link rel="stylesheet" type="text/css" href="styles/layout.css" />
 
 		<!-- Core dependencies -->
-		<!--
 		<script type="text/javascript" src="../lib/deps/$.js"></script>
 		<script type="text/javascript" src="../lib/deps/_.js"></script>
 		<script type="text/javascript" src="../lib/deps/Backbone.js"></script>
 		<script type="text/javascript" src="../lib/deps/async.js"></script>
-		-->
 		
 		<!-- Core -->
-		<!-- 
 		<script type="text/javascript" src="../lib/mast.js"></script>
 		<script type="text/javascript" src="../lib/Util.js"></script>
 		<script type="text/javascript" src="../lib/define.js"></script>
@@ -31,9 +28,11 @@
 		<script type="text/javascript" src="../lib/Comet.js"></script>
 		<script type="text/javascript" src="../lib/ready.js"></script>
 		<script type="text/javascript" src="../lib/raise.js"></script>
-		-->
 
+		<!-- To test compiled version: -->
+		<!-- 
 		<script type="text/javascript" src="../mast.dev.js"></script>
+		-->
 
 
 		<!-- ******************************************************** -->
