Added Mast.regions cache.

--- a/example/index.html
+++ b/example/index.html
@@ -29,6 +29,8 @@
 		<script type="text/javascript" src="../lib/ready.js"></script>
 		<script type="text/javascript" src="../lib/raise.js"></script>
 
+		<script>Mast.debug = false;</script>
+
 		<!-- To test compiled version: -->
 		<!-- 
 		<script type="text/javascript" src="../mast.dev.js"></script>
