--- a/example/public/index.html
+++ b/example/public/index.html
@@ -12,30 +12,33 @@
 	    <link rel="stylesheet" type="text/css" href="styles/layout.css" />
 
 		<!-- Core dependencies -->
-		<script type="text/javascript" src="../lib/deps/$.js"></script>
-		<script type="text/javascript" src="../lib/deps/_.js"></script>
-		<script type="text/javascript" src="../lib/deps/Backbone.js"></script>
-		<script type="text/javascript" src="../lib/deps/async.js"></script>
+		<!--
+		<script type="text/javascript" src="lib/deps/$.js"></script>
+		<script type="text/javascript" src="lib/deps/_.js"></script>
+		<script type="text/javascript" src="lib/deps/Backbone.js"></script>
+		<script type="text/javascript" src="lib/deps/async.js"></script>
+		-->
 		
 		<!-- Core -->
-		<script type="text/javascript" src="../lib/mast.js"></script>
-		<script type="text/javascript" src="../lib/Util.js"></script>
-		<script type="text/javascript" src="../lib/define.js"></script>
-		<script type="text/javascript" src="../lib/Component.js"></script>
-		<script type="text/javascript" src="../lib/Region.js"></script>
-		<script type="text/javascript" src="../lib/Data.js"></script>
-		<script type="text/javascript" src="../lib/Router.js"></script>
-		<script type="text/javascript" src="../lib/Delegator.js"></script>
-		<script type="text/javascript" src="../lib/Comet.js"></script>
-		<script type="text/javascript" src="../lib/ready.js"></script>
-		<script type="text/javascript" src="../lib/raise.js"></script>
+		<!--
+		<script type="text/javascript" src="lib/mast.js"></script>
+		<script type="text/javascript" src="lib/Util.js"></script>
+		<script type="text/javascript" src="lib/define.js"></script>
+		<script type="text/javascript" src="lib/Component.js"></script>
+		<script type="text/javascript" src="lib/Region.js"></script>
+		<script type="text/javascript" src="lib/Data.js"></script>
+		<script type="text/javascript" src="lib/Router.js"></script>
+		<script type="text/javascript" src="lib/Delegator.js"></script>
+		<script type="text/javascript" src="lib/Comet.js"></script>
+		<script type="text/javascript" src="lib/ready.js"></script>
+		<script type="text/javascript" src="lib/raise.js"></script>
+	-->
 
-		<script>Mast.debug = false;</script>
 
 		<!-- To test compiled version: -->
-		<!-- 
-		<script type="text/javascript" src="../mast.dev.js"></script>
-		-->
+		<script type="text/javascript" src="mast.dev.js"></script>
+		<script>Mast.debug = false;</script>
+		
 
 
 		<!-- ******************************************************** -->
