fixed up bindings

--- a/example/public/index.html
+++ b/example/public/index.html
@@ -115,7 +115,7 @@
 			<a class='wipe-things'>Wipe All</a>
 			<ul>
 				<span class="emptyhtml">Out of rainbows...</span>
-				<region id="rows" />
+				<region data-id="rows" ></region>
 			</ul>
 		</div>
 	</script>
