--- a/example/public/index.html
+++ b/example/public/index.html
@@ -51,12 +51,9 @@
 		<script type="text/javascript" src="components/Row.js"></script>
 		<script type="text/javascript">
 
+			// This doesn't automatically work yet!!
 			Mast.define('App', function (){
-				return {
-					'#foo': function () {
-						this.content.attach('Row');
-					}
-				};
+				return {};
 			});
 
 			$.support.cors = true;
