Refactored directoy structure- removed rainbow example

--- a/example/index.html
+++ b/example/index.html
@@ -43,9 +43,10 @@
 			Each template HTML file corresponds to a specific UI component, which is then rendered
 			by the framework.
 
-			In this case, we're including the templates inline using special script tags.
-			This is perfect for the purposes of our demo, since it keeps things simple.
-			In a production setting, or with a distributed team, you'll want to use standard
+			In this case, we're including the templates inline using special script tags.  This is 
+			perfect for the purposes of our demo, since it keeps things simple.
+
+			However, in a production setting or with a distributed team, you'll want to use standard
 			best practices for loading client-side templates
 			( e.g. precompile w/ Grunt or use RequireJS )
 		-->
