Brought in lodash, also reverted b825373a2a7e3a35cbc0af92b75d84196e008360 since the issue seems to have worked itself out, at least cant replicate atm

--- a/example/index.html
+++ b/example/index.html
@@ -138,8 +138,8 @@
 			(roughly equivalent to http://api.jquery.com/jQuery.holdReady/)
 		-->
 		<script>
-			// Set the log level to `debug` so we can see what's going on
-			FRAMEWORK.logLevel = 'debug';
+			// Set the log level so we can see what's going on
+			FRAMEWORK.logLevel = 'verbose';
 
 			// Start framework
 			FRAMEWORK.raise();
