Turned down logs

--- a/example/index.html
+++ b/example/index.html
@@ -138,8 +138,8 @@
 			(roughly equivalent to http://api.jquery.com/jQuery.holdReady/)
 		-->
 		<script>
-			// Set the log level so we can see what's going on
-			FRAMEWORK.logLevel = 'verbose';
+			// Set that log level reaaallll low
+			FRAMEWORK.logLevel = 'error';
 
 			// Start framework
 			FRAMEWORK.raise();
