Added global tweaks config (example is in the example app)

--- a/example/index.html
+++ b/example/index.html
@@ -141,6 +141,9 @@
 			// Set that log level reaaallll low
 			FRAMEWORK.logLevel = 'error';
 
+			// To disable tweaks globally, do:
+			// FRAMEWORK.tweaks = false;
+
 			// Start framework
 			FRAMEWORK.raise();
 		</script>
