Updated default log setting to 'warn'

--- a/example/index.html
+++ b/example/index.html
@@ -139,7 +139,7 @@
 		-->
 		<script>
 			// Set that log level reaaallll low
-			FRAMEWORK.logLevel = 'error';
+			FRAMEWORK.logLevel = 'debug';
 
 			// To disable tweaks globally, do:
 			// FRAMEWORK.tweaks = false;
