Removed potentially confusing stuff

--- a/example/index.html
+++ b/example/index.html
@@ -19,6 +19,7 @@
 			to the `Body` template directly in the HTML
 		-->
 		<region template="Body"></region>
+		<!-- /content -->
 
 		
 
@@ -81,7 +82,7 @@
 			<p>Description goes here...</p>
 		</div>
 		</script>
-
+		<!-- /templates -->
 
 
 
@@ -95,7 +96,7 @@
 			Get the framework itself, plus any other JavaScript dependencies
 		-->
 		<script src="dependencies/framework.dev.js"></script>
-
+		<!-- /dependencies -->
 
 
 
@@ -124,7 +125,7 @@
 		<script src="components/Body.js"></script>
 		<script src="components/Dog.js"></script>
 		<script src="components/Home.js"></script>
-		
+		<!-- /components -->
 
 
 
