Support contents, template, and default as viable default component/template attr synonyms.

--- a/example/index.html
+++ b/example/index.html
@@ -146,7 +146,8 @@
 			(roughly equivalent to http://api.jquery.com/jQuery.holdReady/)
 		-->
 		<script>
-			FRAMEWORK.raise();
+		// FRAMEWORK.logLevel = 'verbose';
+		FRAMEWORK.raise();
 		</script>
 	</body>
 </html>
