pulled out components into their own modules

--- a/example/index.html
+++ b/example/index.html
@@ -123,5 +123,9 @@
 		<script src="components/Home.js"></script>
 		<!-- /components -->
 
+		<script>
+			FRAMEWORK.raise();
+		</script>
+
 	</body>
 </html>
