added default component to body content region

--- a/example/index.html
+++ b/example/index.html
@@ -42,7 +42,7 @@
 					<li destination="#home">Home</li>
 					<li destination="#about">About</li>
 				</ul>
-				<region data-id="content"></region>
+				<region data-id="content" template="Home"></region>
 			</div>
 		</script>
 
