--- a/example/index.html
+++ b/example/index.html
@@ -101,6 +101,13 @@
 
 
 
+		<!--
+			Data
+			========================
+
+			Load data (Backbone models and collections) for our app
+		-->
+		<script src="data.js"></script>
 
 
 		<!--
