remove this context from validateDefinition call

--- a/example/index.html
+++ b/example/index.html
@@ -102,7 +102,7 @@
 			Load data (Backbone models and collections) for our app
 		-->
 		<script src="data.js"></script>
-		<script src='../dist/mast.min.js'></script>
+		<script src='../dist/mast.dev.js'></script>
 
 
 		<!--
@@ -130,7 +130,7 @@
 		<!-- /components -->
 
 		<script>
-			FRAMEWORK.logLevel = 'warn';
+			FRAMEWORK.logLevel = 'debug';
 			FRAMEWORK.raise();
 		</script>
 
