changed log level in example app

--- a/example/index.html
+++ b/example/index.html
@@ -130,7 +130,7 @@
 		<!-- /components -->
 
 		<script>
-			FRAMEWORK.logLevel = 'debug';
+			FRAMEWORK.logLevel = 'warn';
 			FRAMEWORK.raise();
 		</script>
 
