added grunt that starts up a development enviroment. Makes it easier to work on mast

--- a/example/index.html
+++ b/example/index.html
@@ -110,7 +110,7 @@
 			Load data (Backbone models and collections) for our app
 		-->
 		<script src="data.js"></script>
-		<script src='../dist/mast.min.js'></script>
+		<script src='../lib/mast.js'></script>
 
 
 		<!--
