docs for example html

--- a/example/index.html
+++ b/example/index.html
@@ -111,9 +111,9 @@
 		-->
 		<script src="data.js"></script>
 		<script src='../lib/mast.js'></script>
-		<script>
-			new Framework({frameworkId: 'TEST'});
-		</script>
+
+		<!-- Build and expose a new global custom Framework -->
+		<script>new Framework({frameworkId: 'TEST'})</script>
 
 
 
